<resources>
    <string name="app_name">demo1</string>
    <string-array name="states">
        <item>OK</item>
        <item>MẤT</item>
        <item>HỎNG</item>
    </string-array>
    <string name="title_tk">Thống kê</string>
    <string name="mini_title_tk">Thống kê số lượng sử dụng thiết bị theo năm</string>
    <string name="table_col1">Mã thiết bị</string>
    <string name="table_col2">Tên thiết bị</string>
    <string name="table_col3">Tổng số lượng</string>
    <string name="table_col4">2021</string>
</resources>